--- a/MyApp/src/app/Component/toolbar/toolbar.html
+++ b/MyApp/src/app/Component/toolbar/toolbar.html
@@ -1,21 +1,21 @@
 <mat-toolbar [ngClass]="{'scrolled': isScrolled}" class="toolbar">
-  <img height="60px" width="70px" src="aaslin_logo.png" alt="Logo">
+  <img height="50px" width="70px" src="aaslin_logo.png" alt="Logo">
   <span class="company-name">AASLIN Technologies <br>Private Limited</span>
   <div class="property1 desktop-nav" >
     <a mat-button (click)="scrollTo('home')">Home</a>
-<a mat-button (click)="scrollTo('aboutus')">About Us</a>
-<a mat-button (click)="scrollTo('service')">Services</a>
-<a mat-button (click)="scrollTo('team')">Team</a>
-<a mat-button (click)="scrollTo('careers')">Careers</a>
-<a mat-button (click)="scrollTo('WhyUs')">Why Us</a>
-<a mat-button (click)="scrollTo('contacts')">Contacts</a>
+    <a mat-button (click)="scrollTo('aboutus')">About Us</a>
+    <a mat-button (click)="scrollTo('service')">Services</a>
+    <a mat-button (click)="scrollTo('team')">Team</a>
+    <a mat-button (click)="scrollTo('careers')">Careers</a>
+    <a mat-button (click)="scrollTo('WhyUs')">Why Us</a>
+    <a mat-button (click)="scrollTo('contacts')">Contacts</a>
   </div>
   <button mat-icon-button class="mobile-menu-btn" (click)="sidenav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
 <mat-sidenav-container class="mobile-container">
-  <mat-sidenav #sidenav mode="over" class="topnav">
+  <mat-sidenav #sidenav mode="over" class="sidenav">
     <button mat-icon-button class="close-btn" (click)="sidenav.close()">
       <mat-icon>close</mat-icon>
     </button>
@@ -41,7 +41,7 @@
   >
     <path
       d="m-12.66406,442.40068c352.72654,-76.36348 565.45337,5.45453 696.36219,19.99996c130.90882,14.54542 270.90852,-23.63632 367.27196,-47.27263c96.36344,-23.63631 379.99921,-154.54513 527.27163,-209.09047c147.27242,-54.54535 381.813,-92.55755 406.36076,-99.00598c12.27388,-3.22421 917.96684,-113.93032 715.00991,10.61478c-202.95693,124.5451 -210.46055,521.28714 -198.64021,540.29354c11.82034,19.0064 -2500.90899,-15.53962 -2500.0019,-16.36399c-0.90709,0.82437 -9.99798,-180.99343 -9.09089,-181.8178"
-      fill="#a80d2a"
+      fill="#b82228"
     />
     <path
       d="m-116.90461,507.88064c314.5448,-112.72704 523.63527,-21.81814 878.17999,12.72724c354.54471,34.54538 632.72595,-225.45407 978.17978,-294.54484c172.72691,-34.54538 291.36195,-62.7275 368.52007,-78.40952c77.15812,-15.68202 352.84215,-22.50036 359.66142,-7.04537c13.63854,30.90997 97.72734,614.54347 50.90961,639.99858c-46.81772,25.4551 -855.68236,4.54593 -1433.63569,1.81866c-577.95334,-2.72727 -1155.90718,-5.45466 -1155.45364,-5.45491"
@@ -55,26 +55,22 @@
   
 <div id="home" class="content">
   <div #animatedSection style="background-color:transparent" class="property2 animate-section fade-right">
+  <div class="homepage">
   <p>
-    At AASLIN, we are a product-driven technology company passionate about building world-class
-    solutions that redefine user experiences and business processes.
+    In a world marked by rapid technological advancements,dynamic economic shifts,and a constantly changing global landscape,navigating these transformations poses a considerable challenge for our people,clients,partners,communities.At AASLIN Technologies,we are
+dedicated to pushing the limits of what is achievable.Drawing on our expertise,experience,
+and innovative ecosystem, we empower enterprises, individuals,and communities to forge a
+better future at an accelerated pace.weempower enterprises,individuals,and communities to forge a better future at an accelerated pace.
+
   </p>
-  <h2 style="color:#1d1636" >What We Do</h2>
-  <p>
-    We specialize in end-to-end software product development—from stunning front-end interfaces to
-    robust back-end architectures and scalable full-stack solutions.
-  </p>
-  <h2 style="color:#1d1636">Our Culture</h2>
-  <p>
-    We believe in innovation, collaboration, and continuous learning.
-  </p>
+  <!-- <img src="/home.jpg" alt="Home"> -->
+  </div>
 </div>
 </div>
 </div>
 
 <div  #animatedSection id="aboutus" class="property2 animate-section fade-left">
   <h1>About Us</h1>
-  <div class="about">
   <div class="about-content">
     <div class="about-text">
       <img src="/about us.jpg" alt="About Us">
@@ -89,7 +85,6 @@
         We believe in innovation, collaboration, and continuous learning. At our company, you’ll work with cutting-edge technologies and a team of passionate engineers,
         designers, and visionaries who thrive on creativity and excellence.
       </p>
-    </div>
   </div>
 </div>
 </div>
@@ -125,14 +120,6 @@
         <p class="role">{{ member.role }}</p>
         <p class="bio">{{ member.bio }}</p>
       </mat-card-content>
-      <mat-card-actions>
-        <a *ngIf="member.linkedin" [href]="member.linkedin" target="_blank">
-          <mat-icon>linkedin</mat-icon>
-        </a>
-        <a *ngIf="member.github" [href]="member.github" target="_blank">
-          <mat-icon>code</mat-icon>
-        </a>
-      </mat-card-actions>
     </mat-card>
   </div>
 </div>
@@ -146,7 +133,7 @@
     <div class="career-content">
       <img src="careers.jpg" alt="careers">
       <p>
-      <span style="font-size:46px;color:rgb(11, 23, 41);font-weight: bold;">Explore Things</span><br><br>
+      <span style="font-size:43px;color:rgb(11, 23, 41);font-weight: bold;">Explore Things</span><br><br>
       <span style="font-size:35px;color:rgb(219, 173, 44)">Choose Your Path</span><br><br>
       We don’t just build products—we build the future of technology. Our team consists of innovators, problem-solvers, and tech enthusiasts who are passionate about creating solutions that make a difference.
       Problem solvers who thrive in a collaborative environment, creators who want to build scalable products that matter.
@@ -227,11 +214,11 @@
 
 <div class="get-address">
 <h2 style="color:#b82228">Address</h2>
-<p>AASLIN Technologies Private Limited</p>
-<p>Plot No.4-51-7,2nd & 3rd Floor,</p>
-<p>Pavan Adithya,Post officeRoad,</p>
-<p>Lawsons Bay Colony,Pedda Waltair,</p>
-<p>Visakhapatnam-530017</p>
+<p>AASLIN Technologies Private Limited,
+Plot No.4-51-7,2nd & 3rd Floor,
+Pavan Adithya,Post officeRoad,
+Lawsons Bay Colony,Pedda Waltair,
+Visakhapatnam-530017</p>
 <h2 style="color:#b82228">Timing</h2>
 <p>Monday-Friday</p>
 <p>8.00 Am-5.30 Pm</p>
