--- a/MyApp/src/app/Component/toolbar/toolbar.css
+++ b/MyApp/src/app/Component/toolbar/toolbar.css
@@ -13,8 +13,14 @@ h2 {
   font-size: 30px;
 }
 button[mat-raised-button]{
+  margin-top:3%;
   background-color: #b82228;
   color: #ffffff;
+}
+@media (max-width:480px){
+  button[mat-raised-button]{
+  margin-top:5%;
+}
 }
 mat-toolbar {
   position: fixed;
@@ -22,8 +28,6 @@ mat-toolbar {
   left: 0;
   width: 100%;
   background-color: #b82228;
-  /* background-color: #a80d2a; */
-  color:#fff;
   transition: background-color 0.4s ease;
   z-index: 1000;
   height: fit-content;
@@ -31,19 +35,15 @@ mat-toolbar {
 .property1 {
   margin-left: auto;
 }
-.property1 a {
-  padding: 8px 16px;
-  font-size: 14px;
-}
 .mobile-container {
   max-width: 480px;
   margin: auto;
   background-color: #fff;
   color: white;
-  border-radius: 10px;
+  border-radius: none;
 }
 .sidenav {
-  background-color:#1d1636;
+  background-color:#ecebee;
   position: relative;
   padding:20px;
   width:100%;
@@ -56,11 +56,10 @@ mat-toolbar {
   display: block;
 }
 .company-name {
-  font-family: Arial, sans-serif;
+  font-family: "Roboto", Arial sans-serif;
   font-size: 18px;
-  color: #1d1636;
-  font-weight: bold;
-  margin-left: 20px;
+  color: #ffff;
+  margin-left: 30px;
 }
 .desktop-nav {
   overflow: hidden;
@@ -70,28 +69,36 @@ mat-toolbar {
 .desktop-nav a {
   font-size: 16px;
   font-weight: 500;
-  color:#1d1636;
+  color:#ffffff;
   text-decoration: none;
 }
 .desktop-nav a:hover {
-  color: #87add1;
+  color: #65a1fa;
 }
 .mobile-menu-btn {
   display: none;
 }
-@media (max-width: 450px) {
+@media (max-width: 450px) and (max-width: 780px) {
   .desktop-nav {
     display: none; 
   }
   .mobile-menu-btn {
     display: block; 
+    color:white;
+    margin-left:auto;
 }
+  .company-name{
+    margin-left:3%;
+  }
+  mat-toolbar img{
+    height:45px;
+     width:55px;
+  }
 }
 .property2 {
   background-color: #ffffff;
   text-align: center;
   padding: 40px 10px;
-  margin: 0 auto;
   height:auto;
 }
 .property2 p {
@@ -182,17 +189,28 @@ mat-toolbar {
   border-style: none;
   border-radius: 50%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  position:relative;
 }
 @media (max-width: 1024px) {
-  .card {
-    flex: 1 1 45%;
-    max-width: 45%;
+  .carousel-container {
+    flex-direction: row;
+    align-items: center;
+    max-width:900px;
+  }
+  .carousel-track {
+    flex-direction: row;
+    gap: 15px;
+  }
+  card{
+    flex:0 0 100%;
   }
 }
+
 @media (max-width: 450px) and (max-width: 756px){
   .carousel-container {
     flex-direction: column;
     align-items: center;
+    max-width:440px;
   }
   .carousel-track {
     flex-direction: column;
@@ -210,7 +228,6 @@ mat-toolbar {
   height: auto;
   width:260px;
   padding:auto;
-  
 }
 }
 .team-section {
@@ -226,9 +243,9 @@ mat-toolbar {
 .team-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin-left:15%;
   gap: 60px;
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 1300px;
 }
 .team-card {
   text-align: center;
@@ -241,12 +258,14 @@ mat-toolbar {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 .profile-img {
-  width: 100%;
-  max-width: 180px;
+  width: 50%;
   height: auto;
   border-radius: 7%;
   object-fit: cover;
   margin: 0 auto 15px;
+}
+.profile-img .img{
+  background-color:#1d1636;
 }
 .ig1 {
   width: 25vh;
@@ -264,6 +283,11 @@ mat-toolbar {
   text-align: justify;
 }
 @media (max-width: 480px) {
+  .team-grid {
+  display: grid;
+  margin-left:0px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
   .property2 p {
     font-size: 16px;
   }
@@ -291,7 +315,7 @@ mat-toolbar {
 .career-content img {
   max-width: 350px;
   height: 300px;
-  margin-left:30px;
+  margin-left:40px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -303,11 +327,11 @@ mat-toolbar {
 .whyus-content {
   display: flex;
   align-items: flex-start;
-  gap: 40px;
-  max-width: 1200px;
-  margin: 60px auto;
+  text-align: center;
+  align-items:center;
+  gap: 100px;
+  margin: 60px;
   padding: 5px;
-  background-color: #ffffff;
   border-radius: 12px;
   flex-wrap: wrap;
 }
@@ -319,7 +343,7 @@ mat-toolbar {
 }
 .whyus-text {
   flex: 1;
-  justify-content:left;
+  margin-left:18%;
   max-width: 600px;
   color: #333;
   font-family: 'Roboto', Arial, sans-serif;
@@ -330,14 +354,16 @@ mat-toolbar {
   margin-bottom: 8px;
 }
 .whyus-text p {
+  text-align: center;
   font-size: 1rem;
   color: #444;
   margin-bottom: 20px;
   line-height: 1.6;
 }
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   .whyus-content {
     flex-direction: column;
+    margin:0px;
     text-align: center;
   }
   .whyus-content img {
@@ -346,6 +372,7 @@ mat-toolbar {
   }
   .whyus-text {
     text-align: center;
+    margin:10%;
   }
   .career-content img {
   max-width: 80%;
@@ -362,9 +389,9 @@ mat-toolbar {
   justify-content: center;
   align-items: flex-start;
   gap: 60px;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 50px 20px;
+  width:100%;text-align:center;
+  margin: 0;
+  margin-right: 0px;padding-right: 0px;padding-left: 0px;
   flex-wrap: wrap;
   text-align: left;
 }
@@ -460,6 +487,13 @@ form button:disabled {
   text-align: center;
   overflow: hidden;
 }
+.company-container{
+  display: flex;
+  flex-direction: column;
+  width:100%;
+  overflow-y: hidden;
+}
+
 .contact-container {
   display: flex;
   justify-content: space-between;
@@ -486,29 +520,30 @@ form button:disabled {
   opacity: 0;
   transform: translateY(50px);
   transition: all 1s ease-out;
-}
-.animate-section.show {
+} 
+ .animate-section.show {
   opacity: 1;
   transform: translateY(0);
-}
+} 
 .fade-left {
   transform: translateX(-50px);
 }
-.fade-right {
-  transform: translateX(50px);
-}
+ .fade-right {
+  transform: translateY(50px);
+} 
 .zoom-in {
   transform: scale(0.9);
-}
+} 
 .slide-up {
   transform: translateY(80px);
-}
+} 
 .show.fade-left,
 .show.fade-right,
 .show.zoom-in,
-.show.slide-up {
+ .show.slide-up 
+{ 
   transform: translateX(0) scale(1) translateY(0);
-}
+} 
  .wave-section {
   position: relative;
   width: 100%;
@@ -577,7 +612,7 @@ form button:disabled {
   }
 }
 .toolbar.scrolled {
-  background-color: aliceblue;
+  background-color: #1d1636;
   color:#070606;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
