--- a/MyApp/src/app/Component/toolbar/toolbar.html
+++ b/MyApp/src/app/Component/toolbar/toolbar.html
@@ -43,7 +43,7 @@
     />
     <path
       d="m-116.90461,507.88064c314.5448,-112.72704 523.63527,-21.81814 878.17999,12.72724c354.54471,34.54538 632.72595,-225.45407 978.17978,-294.54484c172.72691,-34.54538 291.36195,-62.7275 368.52007,-78.40952c77.15812,-15.68202 352.84215,-22.50036 359.66142,-7.04537c13.63854,30.90997 97.72734,614.54347 50.90961,639.99858c-46.81772,25.4551 -855.68236,4.54593 -1433.63569,1.81866c-577.95334,-2.72727 -1155.90718,-5.45466 -1155.45364,-5.45491"
-      fill="#1d1636"
+      fill="#003a70"
     />
     <path
       d="m-115.93584,623.27542c234.54496,-132.72699 429.09001,-112.72703 678.1804,-83.63619c249.09039,29.09085 389.09011,30.90903 656.36228,-107.2725c267.27217,-138.18153 816.36193,-207.2723 1121.81584,-170.90873c305.45391,36.36356 -292.72666,-19.99996 -293.63778,-18.18228c71.36548,8.18218 627.05432,68.63506 626.48637,265.22584c-0.56794,196.59079 -20.11364,456.59134 -31.02284,531.13767c-10.90919,74.54633 -1561.82313,-36.3646 -1565.45948,-34.54642c-3.63636,1.81818 -1249.08831,-1.81818 -1248.18122,-1.81869c-0.90709,0.00051 39.09282,-234.54445 39.99992,-234.54496c-0.9071,0.00051 -4.54345,-76.36297 -3.63636,-76.36348"
@@ -167,30 +167,30 @@ dedicated to pushing the limits of what is achievable.Drawing on our expertise,e
   <div style="background-color: aliceblue" class="property3">
   <div  class="get-contact">
     <h2 style="color:#d63d42">Contact Form</h2>
-  <form [formGroup]="nestedform" (ngSubmit)="onSubmit()">
+  <form [formGroup]="contactform" (ngSubmit)="onSubmit()">
     <div id="contacts" class="left">
     <label for="firstName">Name</label><br>
     <input id="firstName" type="text" formControlName="firstName">
-    <div *ngIf="nestedform.get('firstName')?.invalid && nestedform.get('firstName')?.touched" class="error">
+    <div *ngIf="contactform.get('firstName')?.invalid && contactform.get('firstName')?.touched" class="error">
       Name is required.
     </div><br>
 
     <label for="email">Email</label><br>
     <input id="email" type="email" formControlName="email">
-    <div *ngIf="nestedform.get('email')?.invalid && nestedform.get('email')?.touched" class="error">
-      <span *ngIf="nestedform.get('email')?.errors?.['required']">Email is required.</span>
-      <span *ngIf="nestedform.get('email')?.errors?.['email']">Invalid email format.</span>
+    <div *ngIf="contactform.get('email')?.invalid && contactform.get('email')?.touched" class="error">
+      <span *ngIf="contactform.get('email')?.errors?.['required']">Email is required.</span>
+      <span *ngIf="contactform.get('email')?.errors?.['email']">Invalid email format.</span>
     </div><br>
 
     <label for="subject">Subject</label><br>
     <input id="subject" type="text" formControlName="subject"><br>
-    <div *ngIf="nestedform.get('firstName')?.invalid && nestedform.get('subject')?.touched" class="error">
+    <div *ngIf="contactform.get('firstName')?.invalid && contactform.get('subject')?.touched" class="error">
       Subject is required.
     </div>
 
     <label for="message">Message</label><br>
     <textarea id="message" formControlName="message" rows="4" cols="35"></textarea>
-    <div *ngIf="nestedform.get('firstName')?.invalid && nestedform.get('message')?.touched" class="error">
+    <div *ngIf="contactform.get('firstName')?.invalid && contactform.get('message')?.touched" class="error">
       Message is required.
     </div><br>
   <button type="Submit">Send Message</button>
